# simple_blog

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  conftest.py  db.sqlite3  docker-compose.dev.yml  docker-compose.prod.yml  manage.py  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_title.py
blog/static/blog/css/: main.css
blog/templates/blog/: base.html  home.html  pagination.html  post.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
blog/tests/: conftest.py  test_blog.py
core/: admin.py  forms.py  models.py  views.py
core/management/commands/: seed_db.py
core/migrations/: 0001_initial.py
core/templates/core/: 404.html
data/: posts.json  users.json
simpleBlog/: asgi.py  settings.py  urls.py  wsgi.py
simpleBlog/settings/: base.py  dev.py  prod.py  test.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_image.py
users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
users/tests/: conftest.py  test_users.py
