[tool.poetry]
name = "simple-blog"
version = "0.1.0"
description = ""
authors = ["Paw565pl <paw565pl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crispy-bootstrap5 = "^0.7"
django-crispy-forms = "^2.0"
pillow = "^10.0.0"
django-resized = "^1.0.2"
psycopg = "^3.1.10"
psycopg-binary = "^3.1.10"
django-hcaptcha-field = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-django = "^4.5.2"
model-bakery = "^1.15.0"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "simpleBlog.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
